[BRANDSR-9595] Social Pop-up exit button overflow issue in MO

--- a/app/design/frontend/AmorePacific/sapt_tw_laneige/web/css/customize.less
+++ b/app/design/frontend/AmorePacific/sapt_tw_laneige/web/css/customize.less
@@ -3283,7 +3283,7 @@ body > .widget.block.block-static-block {
         }
 
         .modal-header {
-            padding-bottom: 4px !important;
+            padding-bottom: 12px !important;
         }
 
         .modal-content {
@@ -5041,9 +5041,6 @@ body > .widget.block.block-static-block {
     }
     .modal-popup .action-close {
         padding: 0px 10px !important;
-    }
-    .modal-popup .toggle_shares{
-        padding-top: 8px !important;
     }
 }
 /* End SAPT-1628 */
